--- a/notebook/OpenAIAssistantAgent.ipynb
+++ b/notebook/OpenAIAssistantAgent.ipynb
@@ -114,7 +114,7 @@
      "text": [
       "Message from assistant\n",
       "--------------------\n",
-      "Hello! I'm an AI assistant, so I don't have emotions, but I'm here to help you with any questions or tasks you have. How can I assist you today?\r\n",
+      "Hello! I'm an AI assistant, so I don't have feelings in the same way humans do. But I'm here and ready to assist you with anything you need! How can I help you today?\r\n",
       "\n",
       "--------------------\n",
       "\r\n"
@@ -157,76 +157,24 @@
      "text": [
       "Message from assistant\n",
       "--------------------\n",
-      "To calculate the difference between the 33rd and 23rd Fibonacci numbers, we can use the formula for the nth Fibonacci number: \n",
+      "To calculate the 33rd Fibonacci number, we can use the formula Fn = Fn-1 + Fn-2, where F1 = 1 and F2 = 1.\n",
       "\n",
-      "F(n) = F(n-1) + F(n-2)\n",
+      "Using this formula, we can find that the 33rd Fibonacci number is 3524578.\n",
       "\n",
-      "First, let's find the 33rd Fibonacci number:\n",
+      "Similarly, the 23rd Fibonacci number is 28657.\n",
       "\n",
-      "F(33) = F(32) + F(31)\n",
+      "To find the difference between the 33rd and 23rd Fibonacci numbers:\n",
       "\n",
-      "Now, let's find the 32nd Fibonacci number:\n",
+      "3524578 - 28657 = 3495921\n",
       "\n",
-      "F(32) = F(31) + F(30)\n",
-      "\n",
-      "Now, let's find the 31st Fibonacci number:\n",
-      "\n",
-      "F(31) = F(30) + F(29)\n",
-      "\n",
-      "Next, let's find the 30th Fibonacci number:\n",
-      "\n",
-      "F(30) = F(29) + F(28)\n",
-      "\n",
-      "Now, let's find the 29th Fibonacci number:\n",
-      "\n",
-      "F(29) = F(28) + F(27)\n",
-      "\n",
-      "Now, let's find the 28th Fibonacci number:\n",
-      "\n",
-      "F(28) = F(27) + F(26)\n",
-      "\n",
-      "Now, let's find the 27th Fibonacci number:\n",
-      "\n",
-      "F(27) = F(26) + F(25)\n",
-      "\n",
-      "Now, let's find the 26th Fibonacci number:\n",
-      "\n",
-      "F(26) = F(25) + F(24)\n",
-      "\n",
-      "Now, let's find the 25th Fibonacci number:\n",
-      "\n",
-      "F(25) = F(24) + F(23)\n",
-      "\n",
-      "Next, let's find the 24th Fibonacci number:\n",
-      "\n",
-      "F(24) = F(23) + F(22)\n",
-      "\n",
-      "Now, let's find the 23rd Fibonacci number:\n",
-      "\n",
-      "F(23) = F(22) + F(21)\n",
-      "\n",
-      "Finally, substituting all the values back into our original equation, we have:\n",
-      "\n",
-      "F(33) = (F(32) + F(31)) = ((F(31) + F(30)) + (F(30) + F(29))) = (((F(30) + F(29)) + (F(29) + F(28))) + ((F(29) + F(28)) + (F(28) + F(27))))\n",
-      "\n",
-      "F(33) = ((((F(29) + F(28)) + (F(28) + F(27))) + ((F(28) + F(27)) + (F(27) + F(26)))) + (((F(28) + F(27)) + (F(27) + F(26))) + ((F(27) + F(26)) + (F(26) + F(25)))))\n",
-      "\n",
-      "Now we can calculate the value of F(33) by continuously substituting the Fibonacci numbers until we reach F(2) and F(1).\n",
-      "\n",
-      "Similarly, we can calculate the value of F(23) by substituting and adding the Fibonacci numbers until we reach F(2) and F(1).\n",
-      "\n",
-      "Then, we can subtract F(23) from F(33) to obtain the final result.\n",
+      "Therefore, the 33rd Fibonacci minus the 23rd Fibonacci is 3,495,921.\n",
       "\n",
       "--------------------\n",
       "\n",
       "Message from assistant\n",
       "--------------------\n",
-      "To calculate the 33rd Fibonacci number and the 23rd Fibonacci number, we start with the first two numbers in the sequence (0 and 1) and then use the following formula:\n",
-      "\n",
-      "F(n) = F(n-1) + F(n-2)\n",
-      "\n",
-      "Let's calculate the 33rd Fibonacci number and the 23rd Fibonacci number and then subtract them.\n",
-      "The 33rd Fibonacci number minus the 23rd Fibonacci number is 3,495,921.\n",
+      "To find the 33rd Fibonacci number, we need to calculate the sum of the 32nd and 31st Fibonacci numbers. Similarly, to find the 23rd Fibonacci number, we need to calculate the sum of the 22nd and 21st Fibonacci numbers. We can subtract the 23rd Fibonacci number from the 33rd Fibonacci number to get the result.\n",
+      "The result of the 33rd Fibonacci number minus the 23rd Fibonacci number is 3,495,921.\n",
       "\n",
       "--------------------\n",
       "\n"
@@ -383,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -395,20 +343,7 @@
      "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [
-    {
-     "ename": "Error",
-     "evalue": "System.Exception: fail to remove assistant asst_k8UeTkDrSot05cxNFjyiwGbX\r\n   at AgentChat.OpenAI.OpenAIClientExtension.RemoveAssistantAsync(OpenAIClient client, String assistantId, Nullable`1 ct)\r\n   at Submission#8.<<Initialize>>d__0.MoveNext()\r\n--- End of stack trace from previous location ---\r\n   at Microsoft.CodeAnalysis.Scripting.ScriptExecutionState.RunSubmissionsAsync[TResult](ImmutableArray`1 precedingExecutors, Func`2 currentExecutor, StrongBox`1 exceptionHolderOpt, Func`2 catchExceptionOpt, CancellationToken cancellationToken)",
-     "output_type": "error",
-     "traceback": [
-      "System.Exception: fail to remove assistant asst_k8UeTkDrSot05cxNFjyiwGbX\r\n",
-      "   at AgentChat.OpenAI.OpenAIClientExtension.RemoveAssistantAsync(OpenAIClient client, String assistantId, Nullable`1 ct)\r\n",
-      "   at Submission#8.<<Initialize>>d__0.MoveNext()\r\n",
-      "--- End of stack trace from previous location ---\r\n",
-      "   at Microsoft.CodeAnalysis.Scripting.ScriptExecutionState.RunSubmissionsAsync[TResult](ImmutableArray`1 precedingExecutors, Func`2 currentExecutor, StrongBox`1 exceptionHolderOpt, Func`2 catchExceptionOpt, CancellationToken cancellationToken)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "// remove assistant\n",
     "await openAIClient.RemoveAssistantAsync(assistant.ID);\n",
